<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>fiducial_vlam</name>
  <version>0.0.0</version>
  <description>Fiducial Marker Visual Localization and Mapping</description>

  <maintainer email="ptrmu@outlook.com">Peter Mullen</maintainer>
  <license>BSD 3 clause</license>

  <url type="repository">https://github.com/ptrmu/fiducial_vlam.git</url>
  <url type="bugtracker">https://github.com/ptrmu/fiducial_vlam/issues</url>

  <author>Clyde McQueen</author>
  <author>Peter Mullen</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>fiducial_vlam_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>ros2_shared</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>yaml_cpp_vendor</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
