<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>fiducial_vlam_msgs</name>
  <version>0.1.0</version>
  <description>fiducial_vlam_msgs for ROS2</description>

  <maintainer email="ptrmu@outlook.com">Peter Mullen</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/ptrmu/fiducial_vlam.git</url>
  <url type="bugtracker">https://github.com/ptrmu/fiducial_vlam/issues</url>

  <author>Clyde McQueen</author>
  <author>Peter Mullen</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
